src/css/styles.module.css
.page {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    padding: 15vmin 5vmin;
}

.Footer {
    position: fixed;
    bottom: 0;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    background-color: white;
    color: #333440;
    width: 100vw;
    padding: .5vmin;
    z-index: 1000;
}

.Header {
    position: fixed;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    background-color: white;
    color: #333440;
    width: 100vw;
    padding: .5vmin;
    z-index: 1000;
}

.link_text {
    font-weight: bold;
    font-size: 1.5vw;
    color: #333440;
    padding: 2vmin 0;
    text-decoration: none;
}

.link_text::after {
    font-weight: bold;
    font-size: 1.5vw;
    color: red;
    text-decoration: none;
}

.link_text:hover {
    font-weight: bold;
    font-size: 1.5vw;
    color: #ed7d45;
    text-decoration: none;
}

.menuIcon {
    color: #333440;
    margin-left: auto;
}

.page_content {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    padding: 5vmin 15vmin;
    background-color: white;
}

.page_content_dark {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    padding: 5vmin 15vmin;
    background-color: #333440;
}

.page_content_title {
    font-weight: bold;
    font-size: 2vw;
}

.page_content_text {
    font-weight: normal;
    font-size: 1.5vw;
}

.page_content_text_bold {
    font-weight: bold;
    font-size: 1.5vw;
}

.logo {
    width: 20vw;
}

.icon {
    width: 5vw;
}

.contentImage {
    width: 20vw;
}

.subContentImage {
    width: 20vw;
}

.miniDeveloperText {
    color: #ed7d45;
    font-weight: bold;
}

.course_card {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    background-color: white;
    width: 22vw;
    height: auto;
    margin: 2vmin;
}

.course_card_details {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    padding: 5vmin;
    background-color: white;
    width: 22vw;
    height: auto;
}

.course_card:hover {
    transform: scale(1.05);
    transition: transform 0.2s ease-in-out
}

.course_card_image {
    width: 22vw;
    padding-bottom: 5vmin;
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}

.course_card_bold_text {
    color: #333440;
    font-weight: bold;
}

.register_form_component {
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: flex-start;
    padding: 5vmin;
    background-color: white;
    width: 40vw;
}

.register_form_subcomponent {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    width: 30vw;
}

.register_form_subcomponent_withborder {
    display: flex;
    direction: row;
    background-color: white;
    width: 30vw;
    border-radius: 30;
    border: gray .3vmin solid;
    padding: 1vmin;
}

.register_form_text_field {
    display: flex;
    width: 30vw;
}


.course_details_content {
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    justify-content: space-evenly;
}

.course_details_content_item {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: center;
    padding: 5vmin;
}

.orage_btn {
    border-radius: 10;
    background: linear-gradient(to bottom, #ffb093, #ed7d45);
    font-size: 2.5vmin;
    font-weight: bold;
}

.gray_btn {
    border-radius: 10;
    background: linear-gradient(to bottom, #d6d7de, #b2b2b2);
    font-size: 2.5vmin;
    /* color: #5f6276; */
    font-weight: bold;
}

.brawn_btn {
    border-radius: 10;
    background: linear-gradient(to bottom, #e09b79, #9e532d);
    font-size: 2.5vmin;
    /* color: #5f6276; */
    font-weight: bold;
}

.details {
    display: flex;
    flex-flow: column wrap;
    align-items: flex-start;
}

@media only screen and (max-width: 600px) {

    /* Your styles for small screens go here */
    body {
        font-size: 14px;
    }

    .page {
        display: flex;
        flex-flow: column wrap;
        justify-content: center;
        align-items: center;
    }

    .page_content {
        display: flex;
        flex-flow: column wrap;
        justify-content: center;
        align-items: center;
        /* padding: 5vmin 15vmin; */
        background-color: white;
    }

    .page_content_dark {
        display: flex;
        flex-flow: column wrap;
        justify-content: center;
        align-items: center;
        /* padding: 5vmin 15vmin; */
        background-color: #333440;
    }

    .logo {
        width: 15vw;
    }

    .icon {
        width: 5vw;
    }

    .contentImage {
        width: 10vw;
    }

    .subContentImage {
        width: 5vw;
    }

    .course_card {
        display: flex;
        flex-flow: column;
        justify-content: center;
        align-items: center;
        background-color: white;
        width: 70vw;
        height: auto;
        margin: 2vmin;
    }

    .course_card_details {
        display: flex;
        flex-flow: column;
        justify-content: center;
        align-items: center;
        padding: 5vmin;
        background-color: white;
        width: 70vw;
        height: auto;
    }

    .course_card_image {
        width: 70vw;
        padding-bottom: 5vmin;
        background-size: cover;
        background-position: center;
        display: flex;
        align-items: flex-end;
        justify-content: center;
    }

    .register_form_subcomponent {
        display: flex;
        flex-flow: column;
        justify-content: space-between;
        align-items: center;
        background-color: white;
        width: 30vw;
    }

    .register_form_subcomponent_withborder {
        display: flex;
        direction: column;
        background-color: white;
        width: 30vw;
        border-radius: 30;
        border: gray .3vmin solid;
        padding: 1vmin;
    }

    .course_details_content {
        display: flex;
        flex-flow: column wrap;
        align-items: flex-start;
        justify-content: space-evenly;
    }
    
    /* Add more styles as needed */
}

